se crea app/Http/resources/ para los recursos de los modelos de la api se modifico los controladores Empresa OfertaLaboral Proyectos y sus modelos
