# app/Http/Resources/EmpresaResource.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+use App\Http\Resources\OfertaLaboralResource;
+
+
+class EmpresaResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request): array
+    {
+        return [
+            'id'         => $this->id,
+            'name'       => $this->name,
+            'email'      => $this->email,
+            'avatar'     => $this->avatar,
+            'address'    => $this->address,
+            'rubro'      => $this->rubro,
+            // Solo incluimos las ofertas si se cargaron con with()
+            'ofertas'    => OfertaLaboralResource::collection($this->whenLoaded('oferta_laborals')),
+            'created_at' => $this->created_at->format('d-m-Y'),
+            'updated_at' => $this->updated_at->format('d-m-Y'),
+        ];
+    }
+}
